design: wbti-result 페이지 수정 및 기타사항 수정